src/app/runner-info/runner-info.component.css
.runner-info-header {
  display: flex;
  flex-wrap: nowrap;
  gap: 5px;
  flex-direction: row;
  border-style: solid;
  border-width: 1px;
  border-color: var(--mat-divider-color, var(--mat-sys-outline));
}
.runner-info-header > div {
  padding: 10px;
}

.runner-info-header-title {
  display: block;
  margin-bottom: 5px;
}

.runner-info-content {
  display: flex;
  flex-wrap: nowrap;
  gap: 5px;
  flex-direction: row;
  padding: 10px;
}

.runner-info-content-header {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(7, 1fr);
  grid-column-gap: 0px;
  justify-items: end;
  grid-row-gap: 5px;
}
.runner-info-content-data {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(7, 1fr);
  grid-column-gap: 0px;
  grid-row-gap: 5px;
}

